Ajout d'un audio et d'un bouton pour lancer le jeu

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
     <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <script src="script.js"></script>
+        
         <title>Mini-Jeux Juste Prix</title>
     </head>
     <body>
-    </body>
+        <audio src="audio/justeprix2009_pierrebillon.mp3" controls></audio>
+        <button onclick="loadgame();">Lancer le jeu</button>
+        <script src="script.js"></script>
+    </body> 
 </html>
