--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body>
         <img src="images/justeprix.png" alt="Image Juste Prix">
         <div>
-            <audio id="audiomp3" src="audio/justeprix2009_pierrebillon.mp3" controls hidden></audio>
+            <audio id="audiomp3" src="audio/justeprix2009_pierrebillon.mp3" controls loop></audio>
             <button onclick="playaudio();">Lancer la musique</button>
             <button onclick="stopmp3()">Arrêter la musique</button>
+            <button onclick="voluemoins()">Baisser le volume</button>
             <button onclick="loadgame();">Lancer le jeu</button>
             <script src="script.js"></script>
         </div>
