--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <body>
         <img src="images/justeprix.png" alt="Image Juste Prix">
         <div>
-            <audio id="audiomp3" src="audio/justeprix2009_pierrebillon.mp3" controls loop></audio>
+            <audio id="audiomp3" src="audio/justeprix2009_pierrebillon.mp3" controls loop hidden></audio>
             <button onclick="playaudio();">Lancer la musique</button>
             <button onclick="stopmp3()">Arrêter la musique</button>
             <button onclick="voluemoins()">Baisser le volume</button>
-            <button onclick="loadgame();">Lancer le jeu</button>
+            <button onclick="Modejoueur1()">Lancer le jeu (1 joueur)</button>
+            <button onclick="Modejoueur2()">Lancer le jeu (2 joueurs)</button>
             <script src="script.js"></script>
         </div>
     </body> 
